# VoxelMultiplatform

./: .gitignore  README.md
Android/: App.js  MyView.js  MyViewManager.js  app.json  package-lock.json  package.json  settings.gradle
Android/android/: settings.gradle
Android/android/app/: CMakeLists.txt  _BUCK  build.gradle  proguard-rules.pro
Android/android/app/libs/Android_dep/: Android_Dependencies.cpp
Android/android/app/libs/ndk_helper/: GLContext.h  JNIHelper.cpp  shader.cpp  tapCamera.h
Android/android/app/src/debug/java/com/voxel/: ReactNativeFlipper.java
Android/android/app/src/main/: AndroidManifest.xml
Android/android/app/src/main/assets/Shaders/color/: vertexshader.cpp
Android/android/app/src/main/assets/Shaders/lightMap/: fragmentshader.cpp
Android/android/app/src/main/cpp/: AndroidUtils.h  Main.cpp  OSEngine.cpp
Android/android/app/src/main/java/com/voxel/: CustomView.java  MainActivity.java  MainApplication.java  MyAppPackage.java  MyFragment.java  MyPackage.java  MyViewManager.java
Android/android/app/src/main/java/com/voxel/helper/: NDKHelper.java
Android/android/app/src/main/java/com/voxel/newarchitecture/: MainApplicationReactNativeHost.java
Android/android/app/src/main/java/com/voxel/newarchitecture/components/: MainComponentsRegistry.java
Android/android/app/src/main/java/com/voxel/newarchitecture/modules/: MainApplicationTurboModuleManagerDelegate.java
Android/android/app/src/main/jni/: CMakeLists.txt  MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
Android/android/app/src/main/res/values/: strings.xml
Android/app/: CMakeLists.txt  build.gradle
Android/app/libs/ndk_helper/: GLContext.cpp  JNIHelper.h
Android/app/src/androidTest/java/com/voxel/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/assets/Assets/: credits.txt
Android/app/src/main/assets/Shaders/color/: fragmentshader.cpp
Android/app/src/main/assets/Shaders/lightMap/: vertexshader.cpp
Android/app/src/main/cpp/: AndroidUtils.cpp  Main.cpp  OSEngine.h
Android/app/src/main/java/com/voxel/: MainActivity.java  VoxelNativeActivity.java
Android/app/src/main/java/com/voxel/helper/: NDKHelper.java
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/voxel/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
Android/ios/: Podfile
Android/ios/Voxel/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
Android/ios/Voxel.xcodeproj/: project.pbxproj
Android/ios/Voxel.xcodeproj/xcshareddata/xcschemes/: Voxel.xcscheme
Android/ios/VoxelTests/: VoxelTests.m
Shared/Shaders (GLSL 1.0)/lightMap/: fragmentshader.cpp  vertexshader.cpp
Shared/Shaders/color/: fragmentshader.cpp  vertexshader.cpp
Shared/Shaders/lightMap/: fragmentshader.cpp  vertexshader.cpp
Shared/Shaders/obselete/3dBasic/: fragmentshader.cpp  vertexshader.cpp
Shared/Shaders/obselete/basic/: fragmentshader.cpp  vertexshader.cpp
Shared/Shaders/obselete/lightingBasic/: fragmentshader.cpp
Shared/Shaders/obselete/materialBasic/: fragmentshader.cpp
Shared/Shaders/obselete/normal/: fragmentshader.cpp  vertexshader.cpp
Shared/Shaders/obselete/textureBasic/: vertexshader.cpp
Shared/Shaders/obselete/transformBasic/: fragmentshader.cpp  vertexshader.cpp
Shared/Source/: Utility.cpp  Utility.h
Shared/Source/camera/: Camera.cpp  Camera.h
Shared/Source/engine/: Engine.cpp  Engine.h
Shared/Source/material/: Material.cpp  Material.h  MaterialBuilder.cpp  MaterialBuilder.h  MaterialColor.cpp  MaterialColor.h  MaterialLightMap.cpp  MaterialLightMap.h
Shared/Source/mesh/: Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h
Shared/Source/object/: GameObject.cpp  GameObject.h
Shared/Source/scenes/: Scene.cpp  Scene.h  SceneLightMap.cpp  SceneLightMap.h
Shared/Source/scenes/obselete/: SceneBasic3D.cpp  SceneBasic3D.h  SceneBasicCamera.cpp  SceneBasicCamera.h  SceneBasicLighting.cpp  SceneBasicLighting.h  SceneBasicMaterial.cpp  SceneBasicMaterial.h  SceneBasicRectangle.cpp  SceneBasicRectangle.h  SceneBasicShaders.cpp  SceneBasicShaders.h  SceneBasicTexture.cpp  SceneBasicTexture.h  SceneBasicTransform.cpp  SceneBasicTransform.h  SceneBasicTriangle.cpp  SceneBasicTriangle.h
Shared/Source/shader/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
Shared/Source/texture/: TextureBuilder.cpp  TextureBuilder.h
Shared/Source/thread/: ThreadPoolBase.cpp  ThreadPoolBase.h
Shared/Source/top/: Enums.h  Includes.h  Utility.cpp  Utility.h
Web/: emcc.txt  server.js
Web/samples/: wasm_worker_batch_and_wait.cpp  wasm_worker_simple.cpp
Web/source/: Main.cpp  OSEngine.cpp  OSEngine.h
Windows/: Voxel.sln
Windows/Voxel/: OSEngine.cpp  OSEngine.h  Voxel.vcxproj  Voxel.vcxproj.filters  ctpl_stl.h  main.cpp
